<resources>
    <string name="app_name">Tap The Number</string>
    <string name="about_text">This is a simple Tap the Number game.</string>
    <string name="knight_tour_info">THE GOAL OF THE GAME (PUZZLE): You must traverse the board according to the rule of moving a chess knight with hitting each field once. You can start from any field. Returning to the beginning, that is, making a tour along a closed route, is not necessary.</string>
    <string name="new_game">New Game</string>
    <string name="start_new_game_confirmation">Are you sure you want to start a new game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enable_hints">Enable Hints</string>
    <string name="disable_hints">Disable Hints</string>
    <string name="congratulations">Congratulations!</string>
    <string name="board_completed">You have completed the board!</string>
    <string name="ok">OK</string>
    <string name="font_size">Font Size:</string>
    <string name="font_color">Font Color:</string>
    <string name="help">Help</string>
    <string name="help_title">Knight\'s Tour Help</string>
    <string name="help_message">
        \t\tGame Description:\n
        The Knight\'s Tour is a mathematical problem where you must move a knight on a chessboard to visit every square exactly once.\n\n
        \t\tGoal:\n
        The goal is to find a sequence of moves for the knight that covers all squares without revisiting any square.\n\n
        \t\tHow to Play:\n
        - Tap on a square to start the tour.\n
        - The knight can only move in an L-shape: two squares in a horizontal or vertical direction, then one square perpendicular to that.\n
        - Keep moving the knight until you have visited every square or there are no more valid moves.\n\n
        \t\tHints:\n
        - The hint symbols indicate the number of possible next moves from a given square.\n
        - \'+\': Recommended move according to Warnsdorff\'s rule.\n
        - \'++\': Mandatory move with only one possible next move.\n
        - \'-\': Possible but not recommended move.\n
        - \'--\': A dead-end move (no further moves possible).\n\n
        Have fun playing the Knight\'s Tour!
    </string>
    <string name="move_number">Move: %1$d</string>
    <string name="choose_language">Language</string>
    <string name="easy_level">Easy</string>
    <string name="medium_level">Medium</string>
    <string name="hard_level">Hard</string>
    <string name="knight_tour">Knight Tour</string>
    <string name="achievements">Achievements</string>
    <string name="high_scores">High Scores</string>
    <string name="about">About</string>
    <string name="select_game">Select Game</string>
    <string name="choose_difficulty">Choose Difficulty</string>
    <string name="tap_the_number">Tap the Number</string>
    <string name="achievement_knight_tour_10">Knight\'s Journey: 10 moves</string>
    <string name="achievement_knight_tour_50">Knight\'s Expedition: 50 moves</string>
    <string name="achievement_knight_tour_100">Knight\'s Odyssey: 100 moves</string>
    <string name="undo">Undo</string>
    <string name="close">Close</string>
</resources>